# AIWorkloads

./: .gitignore  README.md  config.yaml  pyproject.toml  user_config.yaml
codegen/: __init__.py  generate_dockerfile.py  generate_job_schedular_script.py  generate_slurm_script.py  generate_workload_script.py
configs/: ai_workload.yaml  config.yaml  containerization.yaml  dockerfile.yaml  job_schedular.yaml  paths.yaml  slurm.yaml  workload.yaml
doc/: configs.md
scripts/: main.py  singularity.py  utils.py
src/aiworkloads/codegen/: __init__.py  generate_dockerfile.py  generate_job_schedular_script.py  generate_model_framework_script.py  generate_workload_script.py
src/aiworkloads/configs/: config.yaml  dockerfile.yaml  paths.yaml  workflow.yaml
src/aiworkloads/configs/containerization/: docker.yaml  singularity.yaml
src/aiworkloads/configs/job_schedular/: k8.yaml  kubernetes.yaml  slurm.yaml
src/aiworkloads/configs/model_framework/: example.yaml  huggingface.yaml  superbench.yaml
src/aiworkloads/configs/workload/: deepspeed.yaml  example.yaml  huggingface.yaml  superbench.yaml
src/aiworkloads/model_framework/: ddp_example.py  hf.py
src/aiworkloads/scripts/: docker_entrypoint.sh  main.py  utils.py
src/aiworkloads/workloads/: ddp_example.py  hf.py
workloads/: hf.py
